src/objects/Contact_Us_SubType2_Option__c.object
<CustomObject>
    <fields>
        <fullName>Case_Resolution_Owner__c</fullName>
        <description>If &apos;External&apos;, show Contact_Us_SubType2_Option__c.Case_Resolution_Text
If custom provider(s) separated by ; , show Custom_Provider__c.Contact_Custom_Provider_Text</description>
        <inlineHelpText>If &apos;External&apos;, show Contact_Us_SubType2_Option__c.Case_Resolution_Text
If custom provider(s) separated by ; , show Custom_Provider__c.Contact_Custom_Provider_Text</inlineHelpText>
        <label>Case Resolution Owner</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Resolution_Text__c</fullName>
        <label>Case Resolution Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Only_for_CS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Only for CS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>48</fullName>
                </value>
                <value>
                    <fullName>72</fullName>
                </value>
                <value>
                    <fullName>120</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubType_Key__c</fullName>
        <label>SubType Key</label>
        <referenceTo>Contact_Us_SubType_Option__c</referenceTo>
        <relationshipLabel>ContactUs SubType2 Options</relationshipLabel>
        <relationshipName>Contact_Us_SubType2_Options</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>View__c</fullName>
        <label>View</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ContactUs SubType2 Option</label>
    <nameField>
        <label>SubType2 Key</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ContactUs SubType2 Options</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>